hphp/test/zend/good/zend/ns_004.php
<?php
namespace test\ns1;

echo get_class(new Exception()),"\n";